force-app/main/default/objects/MUSW__Recent_Item__c/MUSW__Recent_Item__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Tracks User's most recently viewed items and Numbers</description>
    <label>Recent Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recent Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>