force-app/main/default/objects/MUSW__Recent_Item__c/fields/MUSW__Style__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Style__c</fullName>
    <inlineHelpText>eg Custom44 (Permit's Tab style)</inlineHelpText>
    <label>Style</label>
    <length>20</length>
    <type>Text</type>
</CustomField>