force-app/main/default/objects/MUSW__Recent_Item__c/fields/MUSW__Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Tracking_Number__c</fullName>
    <description>external id not set, because we don't want to find it in searches</description>
    <label>Track No.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>